[gd_scene load_steps=4 format=3 uid="uid://cc8ax6h8l5wal"]

[ext_resource type="Script" path="res://dungeon_rooms/room.gd" id="1_2b3rj"]
[ext_resource type="TileSet" uid="uid://coh7rvofoycta" path="res://dungeon_rooms/dungeon_tileset.tres" id="2_2cin5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_et5wy"]
size = Vector2(880, 880)

[node name="DungeonSquare1" type="StaticBody2D"]
z_index = -1
collision_layer = 4
collision_mask = 4
script = ExtResource("1_2b3rj")
door_dirs = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(320, 448)
shape = SubResource("RectangleShape2D_et5wy")

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
scale = Vector2(4, 4)
tile_set = ExtResource("2_2cin5")
format = 2
layer_0/name = "NorthWall"
layer_0/modulate = Color(1, 0.255082, 0.566405, 1)
layer_0/z_index = 1
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 1, 65536, 0, 2, 65536, 0, 3, 65536, 0, 4, 65536, 0)
layer_1/name = "EastWall"
layer_1/modulate = Color(0.527, 0.603152, 1, 1)
layer_1/z_index = 1
layer_1/tile_data = PackedInt32Array(327685, 393216, 3, 262149, 393216, 3, 196613, 393216, 3, 131077, 393216, 3, 65541, 393216, 3)
layer_2/name = "SouthWall"
layer_2/modulate = Color(5.0056e-06, 0.804159, 0.365806, 1)
layer_2/z_index = 1
layer_2/tile_data = PackedInt32Array(393216, 65536, 7, 393217, 65536, 7, 393218, 65536, 7, 393219, 65536, 7, 393220, 65536, 7)
layer_3/name = "WestWall"
layer_3/modulate = Color(0.850067, 0.793085, 0, 1)
layer_3/z_index = 1
layer_3/tile_data = PackedInt32Array(393215, 0, 3, 327679, 0, 3, 262143, 0, 3, 196607, 0, 3, 131071, 0, 3)
layer_4/name = "Base"
layer_4/tile_data = PackedInt32Array(131073, 327680, 3, 65536, 196608, 1, 131072, 65536, 4, 196608, 196608, 3, 262144, 131072, 2, 262145, 65536, 1, 262146, 65536, 1, 262147, 65536, 4, 196611, 65536, 3, 131075, 262144, 3, 65539, 65536, 1, 65538, 65536, 4, 65537, 65536, 3, 327680, 65536, 3, 327681, 131072, 4, 327682, 196608, 2, 327683, 131072, 2, 262143, 65536, 5, 196612, 262144, 3, 65540, 327680, 3, 131076, 131072, 4, 262148, 196608, 3, 327684, 131072, 6, 393220, 0, 0, 393219, 131072, 6, 393218, 131072, 5, 393217, 65536, 2, 393216, 393216, 0, 327679, 65536, 3, 393215, 393216, 0, 196607, 131072, 5, 131071, 393216, 7, 0, 393216, 7, 1, 65536, 4, 2, 327680, 3, 3, 65536, 5, 4, 0, 7, 65535, 0, 0, 458751, 0, 7, 196609, 196608, 1, 196610, 65536, 6, 131074, 65536, 5, 393221, 393216, 7, 5, 393216, 0, 327685, 0, 0, 262149, 131072, 4, 196613, 131072, 4, 131077, 196608, 3, 65541, 0, 7)

[node name="Centroid" type="Marker2D" parent="."]
position = Vector2(192, 448)

[node name="WestDoor" type="Marker2D" parent="."]
position = Vector2(-128, 448)

[node name="NorthDoor" type="Marker2D" parent="."]
position = Vector2(320, 0)

[node name="EastDoor" type="Marker2D" parent="."]
position = Vector2(768, 448)

[node name="SouthDoor" type="Marker2D" parent="."]
position = Vector2(320, 896)
